# warehouse

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
warehouse-application/: .env.example  main.py
warehouse-application/alembic/: env.py
warehouse-application/alembic/versions/: 2024_09_25_0637-5dbbdfea5a17_init_schemas.py  2024_09_27_0433-be908e6dc993_initial_role_table.py  2024_09_27_0436-57683802a670_initital_users_table.py  2024_09_27_0438-8e91f78f81c6_initital_products_table.py  2024_09_27_0441-44ff3492ab4e_initital_orders_table.py  2024_09_27_0454-399f32584519_initital_users_table.py  2024_09_27_0454-622384f46098_initital_roles_table.py  2024_09_27_0456-435a7a8fbfde_initital_products_table.py  2024_09_27_0459-13004364cfb4_initital_order_items_table.py  2024_09_27_0459-fbba1c2e7ab4_initital_orders_table.py  2024_09_27_0621-e76c6f5740b8_updated_at_is_optional.py  2024_09_27_0731-7b0ebad63ded_initial.py
warehouse-application/api/api_v1/: __init__.py  order.py  products.py  roles.py  users.py
warehouse-application/core/: config.py
warehouse-application/core/models/: __init__.py  base.py  db_helper.py  orderItems.py  orders.py  products.py  roles.py  schemas.py  user.py  users.py
warehouse-application/core/schemas/: order.py  product.py  role.py  user.py
warehouse-application/crud/: order.py  product.py  roles.py  users.py
warehouse-application/utils/: logger.py  uppercase_converter.py
